tests/spec/parse/snapshots/subtraction_of_unary_minus_variable.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(a: int, b: int) {
    let result = a--b;
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "a",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 3,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
            Binding {
                pattern: Identifier {
                    identifier: "b",
                    span: Span {
                        file_id: 0,
                        byte_offset: 17,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 20,
                            byte_length: 3,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "result",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 33,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Binary {
                            operator: Subtraction,
                            left: Identifier {
                                value: "a",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 42,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                            right: Unary {
                                operator: Negative,
                                expression: Identifier {
                                    value: "b",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 45,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 44,
                                    byte_length: 2,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 42,
                                byte_length: 4,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 29,
                            byte_length: 17,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 25,
                    byte_length: 24,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 48,
        },
    },
]
