tests/spec/parse/snapshots/task_with_block.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    task {
      print("concurrent task");
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Block {
            items: [
                Task {
                    expression: Block {
                        items: [
                            Call {
                                expression: Identifier {
                                    value: "print",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 26,
                                        byte_length: 5,
                                    },
                                    binding_id: None,
                                    qualified: None,
                                },
                                args: [
                                    Literal {
                                        literal: String {
                                            value: "concurrent task",
                                            raw: false,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 32,
                                            byte_length: 17,
                                        },
                                    },
                                ],
                                spread: None,
                                type_arguments: None,
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 26,
                                    byte_length: 24,
                                },
                                call_kind: None,
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 20,
                            byte_length: 35,
                        },
                    },
                    ty: Var {
                        id: uninferred,
                    },
                    span: Span {
                        file_id: 0,
                        byte_offset: 15,
                        byte_length: 40,
                    },
                },
            ],
            ty: Var {
                id: uninferred,
            },
            span: Span {
                file_id: 0,
                byte_offset: 11,
                byte_length: 46,
            },
        },
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 56,
        },
    },
]
