tests/spec/parse/snapshots/try_block_basic.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let result = try {
      risky()?
    };
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "result",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: TryBlock {
                            items: [
                                Propagate {
                                    expression: Call {
                                        expression: Identifier {
                                            value: "risky",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 38,
                                                byte_length: 5,
                                            },
                                            resolution: Unresolved,
                                        },
                                        args: [],
                                        spread: None,
                                        type_arguments: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 38,
                                            byte_length: 7,
                                        },
                                        call_kind: Unresolved,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 38,
                                        byte_length: 8,
                                    },
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            try_keyword_span: Span {
                                file_id: 0,
                                byte_offset: 28,
                                byte_length: 3,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 28,
                                byte_length: 22,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 35,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 42,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 52,
        },
    },
]
